--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -21,6 +21,7 @@ strong {
 
 hr {
   border-top: 1px solid var(--global-divider-color);
+  opacity: 1;
 }
 
 table {
